[gd_scene load_steps=3 format=3 uid="uid://d37fde8sssgqc"]

[ext_resource type="Script" path="res://Prog54c.gd" id="1_skq57"]

[sub_resource type="LabelSettings" id="LabelSettings_ename"]
font_size = 25

[node name="Prog54c" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_skq57")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 54.0
offset_right = 275.0
offset_bottom = 140.0
text = "Radius:"
label_settings = SubResource("LabelSettings_ename")

[node name="txtRad" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 553.0
offset_top = 275.0
offset_right = 940.0
offset_bottom = 393.0

[node name="Claculate" type="Button" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 528.0
offset_right = 307.0
offset_bottom = 597.0
text = "Calculate"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 630.0
offset_top = 526.0
offset_right = 906.0
offset_bottom = 595.0
text = "Exit"

[node name="Clear" type="Button" parent="."]
layout_mode = 0
offset_left = 332.0
offset_top = 528.0
offset_right = 608.0
offset_bottom = 597.0
text = "Clear"

[node name="label" type="Label" parent="."]
layout_mode = 0
offset_left = 58.0
offset_top = 294.0
offset_right = 537.0
offset_bottom = 491.0

[connection signal="pressed" from="Claculate" to="." method="_on_claculate_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
